-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Highlighted by smatch in two places:
/home/green/smt/git/lustre-release/lnet/klnds/socklnd/socklnd_cb.c:2635 ksocknal_reaper() warn: inconsistent indenting /home/green/smt/git/lustre-release/lnet/klnds/socklnd/socklnd.c:1459 ksocknal_close_conn_locked() warn: inconsistent indenting
- is related to
-
LU-6142 Enforce Linux kernel coding style in all code
-
- Open
-